完成: API全部 & 未完成: 待修邏輯
